--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <audio
       autoplay="true"
       loop
-      src="https://res.cloudinary.com/dlr8gie0d/video/upload/v1617498637/hbd_lrzzzr.mp3"
-    ></audio>
+    >
+      <source src="Waterfall (Jon Schmidt Original).mp3" type="audio/mpeg">
+    </audio>
     <div class="container">
       <div class="one">
         <h1 class="one">
@@ -44,7 +45,6 @@
         <p class="idea-2">この一年が素敵な日々になりますように</p>
         <p class="idea-3">
           <strong>special day</strong>
-          
         </p>
         <p class="idea-4">Because,</p>
         <p class="idea-5">
@@ -141,3 +141,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
   <script type="application/javascript" src="script/main.js"></script>
 </html>
+
