--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
   </head>
 
   <body>
-    <audio
-      autoplay="true"
-      loop
-    >
-     <source src="https://github.com/nkorofu/happy.github.io/blob/main/Waterfall%20(Jon%20Schmidt%20Original).mp3" type="audio/mpeg">
+    <body>
+    <audio id="birthdaySong" loop>
+      <source src="Waterfall (Jon Schmidt Original).mp3" type="audio/mpeg">
+      あなたのブラウザは audio タグに対応していません。
     </audio>
     <div class="container">
       <div class="one">
