--- a/index.html
+++ b/index.html
@@ -135,9 +135,15 @@
         <p class="last-smile">:)</p>
       </div>
     </div>
+   </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+    <script type="application/javascript" src="script/main.js"></script>
+    <script>
+      window.onload = function() {
+        var audio = document.getElementById("birthdaySong");
+        audio.play(); // 自動再生を開始
+      };
+    </script>
   </body>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-  <script type="application/javascript" src="script/main.js"></script>
 </html>
-
