--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" href="style/style.css" />
-  </head>
+   </head>
 
   <body>
-    <body>
     <audio id="birthdaySong" loop>
       <source src="Waterfall (Jon Schmidt Original).mp3" type="audio/mpeg">
       あなたのブラウザは audio タグに対応していません。
     </audio>
+
+    <button id="playButton">音楽を再生</button>
+    
     <div class="container">
       <div class="one">
         <h1 class="one">
@@ -135,14 +137,16 @@
         <p class="last-smile">:)</p>
       </div>
     </div>
-   </div>
+  </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
     <script type="application/javascript" src="script/main.js"></script>
     <script>
-      window.onload = function() {
+      document.getElementById("playButton").onclick = function() {
         var audio = document.getElementById("birthdaySong");
-        audio.play(); // 自動再生を開始
+        audio.play().catch(function(error) {
+          console.error("再生エラー:", error);
+        });
       };
     </script>
   </body>
