--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
   </head>
 
   <body>
-    <audio
-      autoplay="true"
-      loop
-    >
-      <source src="https://example.com/path/to/your/song.mp3" type="audio/mpeg">
+    <audio autoplay="true" loop>
+      <source src="Waterfall (Jon Schmidt Original).mp3" type="audio/mpeg">
       あなたのブラウザは audio タグに対応していません。
     </audio>
     <div class="container">
@@ -142,4 +139,3 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
   <script type="application/javascript" src="script/main.js"></script>
 </html>
-
