--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   <body>
     <audio autoplay="true" loop>
-      <source src="Waterfall (Jon Schmidt Original).mp3" type="audio/mpeg">
+      <source src="happy.github.io
+/Waterfall (Jon Schmidt Original).mp3" type="audio/mpeg">
       あなたのブラウザは audio タグに対応していません。
     </audio>
     <div class="container">
