--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
   </head>
 
   <body>
-    <audio autoplay="true" loop>
-      <source src="happy.github.io/music999
-/Can't Help Falling in Love (Elvis).mp3
-" type="audio/mpeg">
-      あなたのブラウザは audio タグに対応していません。
+    <audio id="birthdayMusic" loop>
+        <source src="happy.github.io/music999/Can't Help Falling in Love (Elvis).mp3" type="audio/mpeg">
+        あなたのブラウザは audio タグに対応していません。
     </audio>
     <div class="container">
       <div class="one">
