--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   </head>
 
   <body>
-    <audio id="birthdayMusic" loop>
-        <source src="happy.github.io/music999/Can't Help Falling in Love (Elvis).mp3" type="audio/mpeg">
-        あなたのブラウザは audio タグに対応していません。
-    </audio>
+   <audio id="birthdayMusic" autoplay loop>
+  <source src="https://github.com/nkorofu/happy.github.io/blob/main/music999/All%20of%20Me%20(Jon%20Schmidt%20original%20tune).mp3" type="audio/mpeg">
+  あなたのブラウザは audio タグに対応していません。
+</audio>
     <div class="container">
       <div class="one">
         <h1 class="one">
