--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   <body>
    <audio id="birthdayMusic" autoplay loop>
-  <source src="https://github.com/nkorofu/happy.github.io/blob/main/music999/All%20of%20Me%20(Jon%20Schmidt%20original%20tune).mp3" type="audio/mpeg">
+  <source src="https://raw.githubusercontent.com/nkorofu/happy.github.io/main/music999/All%20of%20Me%20(Jon%20Schmidt%20original%20tune).mp3
+" type="audio/mpeg">
   あなたのブラウザは audio タグに対応していません。
 </audio>
     <div class="container">
