--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
 
-  <body>
-  <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=8P9hAN-teOU" frameborder="0" allowfullscreen></iframe>
-    </div>
+ <body>
+    <audio autoplay loop>
+        <source src="https://www.youtube.com/watch?v=8P9hAN-teOU" type="audio/mpeg">
+        あなたのブラウザは audio タグに対応していません。
+    </audio>
 
     <div class="container">
 
