--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Happy Birthday!!! :)</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Work+Sans:300,400"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" href="style/style.css" />
-  </head>
+</head>
 
- <body>
+<body>
     <audio autoplay loop>
-        <source src="Waterfall (Jon Schmidt Original).mp3" type="audio/mpeg">
+        <source src="https://www.youtube.com/watch?v=8P9hAN-teOU" type="audio/mpeg">
         あなたのブラウザは audio タグに対応していません。
     </audio>
-
     <div class="container">
 
       <div class="one">
