--- a/index.html
+++ b/index.html
@@ -11,18 +11,14 @@
 </head>
 
 <body>
-    <audio autoplay loop>
-        <source src="Waterfall (Jon Schmidt Original).mp3" type="audio/mpeg">
+    <audio id="birthdayMusic" loop>
+        <source src="https://github.com/nkorofu/happy.github.io/blob/main/Waterfall%20(Jon%20Schmidt%20Original).mp3" type="audio/mpeg">
         あなたのブラウザは audio タグに対応していません。
     </audio>
     <div class="container">
-
-      <div class="one">
-        <h1 class="one">
-          Hey
-          <span id="name"></span>
-        </h1>
-        <p class="two" id="greetingText">曲が流れるから良かったら音量上げて</p>
+        <div class="one">
+            <h1 class="one">Hey <span id="name"></span></h1>
+            <p class="two" id="greetingText">曲が流れるから良かったら音量上げて</p>
       </div>
       <div class="three">
         <p>It's your birthday!!! :D</p>
