--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 </head>
 
 <body>
-    <audio id="birthdayMusic" loop>
-        <source src="https://github.com/nkorofu/happy.github.io/blob/main/Waterfall%20(Jon%20Schmidt%20Original).mp3" type="audio/mpeg">
-        あなたのブラウザは audio タグに対応していません。
-    </audio>
+    <audio autoplay loop src="https://github.com/nkorofu/happy.github.io/blob/main/Waterfall%20(Jon%20Schmidt%20Original).mp3"></audio>
     <div class="container">
         <div class="one">
             <h1 class="one">Hey <span id="name"></span></h1>
