--- a/index.html
+++ b/index.html
@@ -11,50 +11,47 @@
 </head>
 
 <body>
-    <audio autoplay loop src="https://github.com/nkorofu/happy.github.io/blob/main/Waterfall%20(Jon%20Schmidt%20Original).mp3"></audio>
+    <audio id="birthdayMusic" autoplay loop src="https://github.com/nkorofu/happy.github.io/blob/main/Waterfall%20(Jon%20Schmidt%20Original).mp3"></audio>
     <div class="container">
         <div class="one">
             <h1 class="one">Hey <span id="name"></span></h1>
             <p class="two" id="greetingText">曲が流れるから良かったら音量上げて</p>
-      </div>
-      <div class="three">
-        <p>It's your birthday!!! :D</p>
-      </div>
-      <div class="four">
-        <div class="text-box">
-          <p class="hbd-chatbox">
-            Happy birthday to you!! Yeee! 
-            すぎちゃってたらごめんね(;´Д｀)
-          </p>
-          <p class="fake-btn">ty</p>
         </div>
-      </div>
-      <div class="five">
-        <p class="idea-1">いろいろあると思うけど、頑張っていこ( ｀ー´)ノ</p>
-        <p class="idea-2">この一年が素敵な日々になりますように</p>
-        <p class="idea-3">
-          <strong>special day</strong>
-        </p>
-        <p class="idea-4">Because,</p>
-        <p class="idea-5">
-          It's your birthday
-          <span>:)</span>
-        </p>
-        <p class="idea-6">
-          <span>S</span>
-          <span>O</span>
-        </p>
-      </div>
-      <div class="six">
-        <img src="" alt="" class="lydia-dp" id="https://drive.google.com/file/d/18ELh5MZi4iBX00U9Z_ccyjzYAd9fS9Z2/view" />
-        <img src="img/hat.svg" alt="" class="hat" />
-        <div class="wish">
-          <h3 class="wish-hbd">Happy Birthday!</h3>
-          <h5 id="wishText">改めて、誕生日おめでとう！</h5>
+        <div class="three">
+            <p>It's your birthday!!! :D</p>
         </div>
-      </div>
-      <div class="seven">
-        <div class="baloons">
+        <div class="four">
+            <div class="text-box">
+                <p class="hbd-chatbox">
+                    Happy birthday to you!! Yeee! 
+                    すぎちゃってたらごめんね(;´Д｀)
+                </p>
+                <p class="fake-btn">ty</p>
+            </div>
+        </div>
+        <div class="five">
+            <p class="idea-1">いろいろあると思うけど、頑張っていこ( ｀ー´)ノ</p>
+            <p class="idea-2">この一年が素敵な日々になりますように</p>
+            <p class="idea-3">
+                <strong>special day</strong>
+            </p>
+            <p class="idea-4">Because,</p>
+            <p class="idea-5">It's your birthday <span>:)</span></p>
+            <p class="idea-6">
+                <span>S</span>
+                <span>O</span>
+            </p>
+        </div>
+        <div class="six">
+            <img src="your-image-url.jpg" alt="Your Image" class="lydia-dp" />
+            <img src="img/hat.svg" alt="" class="hat" />
+            <div class="wish">
+                <h3 class="wish-hbd">Happy Birthday!</h3>
+                <h5 id="wishText">改めて、誕生日おめでとう！</h5>
+            </div>
+        </div>
+        <div class="seven">
+            <div class="baloons">
           <img src="img/ballon2.svg" alt="" />
           <img src="img/ballon1.svg" alt="" />
           <img src="img/ballon3.svg" alt="" />
