--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <audio id="birthdayMusic" autoplay loop src="https://github.com/nkorofu/happy.github.io/blob/main/Waterfall%20(Jon%20Schmidt%20Original).mp3"></audio>
+    <audio id="birthdayMusic" loop src="https://github.com/nkorofu/happy.github.io/blob/main/Waterfall%20(Jon%20Schmidt%20Original).mp3"></audio>
     <div class="container">
         <div class="one">
             <h1 class="one">Hey <span id="name"></span></h1>
-            <p class="two" id="greetingText">曲が流れるから良かったら音量上げて</p>
+            <p class="two" id="click-message">Click me</p>
         </div>
         <div class="three">
             <p>It's your birthday!!! :D</p>
