--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <audio id="birthdayMusic" loop src="https://github.com/nkorofu/happy.github.io/blob/main/Waterfall%20(Jon%20Schmidt%20Original).mp3"></audio>
+    <audio id="birthdayMusic" loop src="<audio id="birthdayMusic" loop src="https://raw.githubusercontent.com/nkorofu/happy.github.io/main/Waterfall%20(Jon%20Schmidt%20Original).mp3"></audio>
+"></audio>
     <div class="container">
         <div class="one">
             <h1 class="one">Hey <span id="name"></span></h1>
