--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Hey
+          wait a minute
           <span id="name"></span>
         </h1>
-        <p class="two" id="greetingText">曲が流れるから良かったら音量上げて</p>
+        <p class="two" id="greetingText">for you</p>
       </div>
       <div class="three">
         <p>It's your birthday!!! :D</p>
@@ -34,16 +34,20 @@
         <div class="text-box">
           <p class="hbd-chatbox">
             Happy birthday to you!! Yeee! 
-            すぎちゃってたらごめんね(;´Д｀)
+            過ぎちゃってたらごめんね(;´Д｀)
           </p>
           <p class="fake-btn">ty</p>
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">いろいろあると思うけど、頑張っていこ( ｀ー´)ノ</p>
-        <p class="idea-2">この一年が素敵な日々になりますように</p>
+        <p class="idea-1">いつまでも
+          太陽のようなステキな
+          笑顔でいて下さい。</p>
+        <p class="idea-2">この一年が
+          素敵な日々に
+          なりますように</p>
         <p class="idea-3">
-          <strong>special day</strong>
+          <strong>today is special day</strong>
           
         </p>
         <p class="idea-4">Because,</p>
@@ -61,7 +65,7 @@
         <img src="img/hat.svg" alt="" class="hat" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Birthday!</h3>
-          <h5 id="wishText">改めて、誕生日おめでとう！</h5>
+          <h5 id="wishText">誕生日おめでとう</h5>
         </div>
       </div>
       <div class="seven">
