--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         </svg>
       </div>
       <div class="nine">
-        <p>おーわり、システム出来るのと、頭がいいのは別なんでそこんところよろしく</p>
-        <p id="replay">あ～、そうそう、この辺タッチすればもう一回見れるよ</p>
+        <p>終わり、システムしかできないから!(^^)!く</p>
+        <p id="replay">この辺タッチすればもう一回見れるよ</p>
         <p class="last-smile">:)</p>
       </div>
     </div>
