--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           wait a minute
           <span id="name"></span>
         </h1>
-        <p class="two" id="greetingText">for you</p>
+        <p class="two" id="greetingText">now loading</p>
       </div>
       <div class="three">
         <p>It's your birthday!!! :D</p>
