--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   </head>
 
   <body>
-    <audio id="background-music" autoplay loop>
-      <source src="https://res.cloudinary.com/dwdtw9ef8/video/upload/v1726910647/Waterfall_Jon_Schmidt_Original_oiiisx.mp3" type="audio/mpeg">
-      Your browser does not support the audio tag.
-    </audio>
+   <audio id="background-music" loop>
+  <source src="https://res.cloudinary.com/dwdtw9ef8/video/upload/v1726910647/Waterfall_Jon_Schmidt_Original_oiiisx.mp3" type="audio/mpeg">
+  Your browser does not support the audio tag.
+</audio>
+<button id="play-button">音楽を再生</button>
+
     <div class="container">
       <div class="one">
         <h1 class="one">
