--- a/index.html
+++ b/index.html
@@ -1,74 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Happy Birthday!!! :)</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Work+Sans:300,400"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" href="style/style.css" />
-  </head>
+</head>
 
-  <body>
-   <audio id="background-music" loop>
-  <source src="https://res.cloudinary.com/dwdtw9ef8/video/upload/v1726910647/Waterfall_Jon_Schmidt_Original_oiiisx.mp3" type="audio/mpeg">
-  Your browser does not support the audio tag.
-</audio>
-<button id="play-button">音楽を再生</button>
+<body>
+    <audio id="background-music" loop>
+        <source src="https://res.cloudinary.com/dwdtw9ef8/video/upload/v1726910647/Waterfall_Jon_Schmidt_Original_oiiisx.mp3" type="audio/mpeg">
+        Your browser does not support the audio tag.
+    </audio>
+    <button id="play-button">音楽を再生</button>
 
     <div class="container">
-      <div class="one">
-        <h1 class="one">
-          wait a minute
-          <span id="name"></span>
-        </h1>
-        <p class="two" id="greetingText">now loading</p>
-      </div>
-      <div class="three">
-        <p>It's your birthday!!! :D</p>
-      </div>
-      <div class="four">
-        <div class="text-box">
-          <p class="hbd-chatbox">
-            Happy birthday to you!! Yeee! 
-          </p>
-          <p class="fake-btn">ty</p>
+        <div class="one">
+            <h1 class="one">wait a minute<span id="name"></span></h1>
+            <p class="two" id="greetingText">now loading</p>
         </div>
-      </div>
-      <div class="five">
-        <p class="idea-1">いつまでも
-          太陽のようなステキな
-          笑顔でいて下さい。</p>
-        <p class="idea-2">この一年が
-          素敵な日々に
-          なりますように</p>
-        <p class="idea-3">
-          <strong>today is special day</strong>
-        </p>
-        <p class="idea-4">Because,</p>
-        <p class="idea-5">
-          It's your birthday
-          <span>:)</span>
-        </p>
-        <p class="idea-6">
-          <span>S</span>
-          <span>O</span>
-        </p>
-      </div>
-      <div class="six">
-        <img src="" alt="" class="lydia-dp" id="https://drive.google.com/file/d/18ELh5MZi4iBX00U9Z_ccyjzYAd9fS9Z2/view" />
-        <img src="img/hat.svg" alt="" class="hat" />
-        <div class="wish">
-          <h3 class="wish-hbd">Happy Birthday!</h3>
-          <h5 id="wishText">誕生日おめでとう</h5>
+        <div class="three">
+            <p>It's your birthday!!! :D</p>
         </div>
-      </div>
-      <div class="seven">
-        <div class="baloons">
+        <div class="four">
+            <div class="text-box">
+                <p class="hbd-chatbox">Happy birthday to you!! Yeee!</p>
+                <p class="fake-btn">ty</p>
+            </div>
+        </div>
+        <div class="five">
+            <p class="idea-1">いつまでも太陽のようなステキな笑顔でいて下さい。</p>
+            <p class="idea-2">この一年が素敵な日々になりますように</p>
+            <p class="idea-3"><strong>today is special day</strong></p>
+            <p class="idea-4">Because,</p>
+            <p class="idea-5">It's your birthday<span>:)</span></p>
+            <p class="idea-6"><span>S</span><span>O</span></p>
+        </div>
+        <div class="six">
+            <img src="" alt="" class="lydia-dp" />
+            <img src="img/hat.svg" alt="" class="hat" />
+            <div class="wish">
+                <h3 class="wish-hbd">Happy Birthday!</h3>
+                <h5 id="wishText">誕生日おめでとう</h5>
+            </div>
+        </div>
+        <div class="seven">
+            <div class="baloons">
           <img src="img/ballon2.svg" alt="" />
           <img src="img/ballon1.svg" alt="" />
           <img src="img/ballon3.svg" alt="" />
