--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
             </svg>
         </div>
         <div class="nine">
-            <p>終わり、システムしかできないから!(^^)!く</p>
+            <p>終わり、システムしかできないから!(^^)!
+            そういうことを頼ってね！</p>
             <p id="replay">この辺タッチすればもう一回見れるよ</p>
             <p class="last-smile">:)</p>
         </div>
