--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </p>
         </div>
         <div class="six">
-            <img src="https://drive.google.com/uc?id=18ELh5MZi4iBX00U9Z_ccyjzYAd9fS9Z2" alt="Lydia" class="lydia-dp" />
+            <img src="" alt="Lydia" class="lydia-dp" />
             <img src="img/hat.svg" alt="" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
